# pyIdeaStatica

./: .gitignore  N6004_fatigue_weld_stress.xlsx  N6005_weld_stress.xlsx  data copy.json  data.json  export_weld_stresses.py  fatigue.py  outputN6004_fatigue_weld_stress.xlsx  pyproject.toml  stress-strain_welds.py  test.xlsx
output/: N6004_fatigue_weld_stress.xlsx  N6005_data.json  N6005_weld_stress.xlsx
src/pyideastatica/: export.py
